# aocc

./: 2025_day1.c  2025_day2.c  2025_day3.c  2025_day4.c  2025_day5.c  2025_day6.c  2025_day7.c  2025_day8.c  2025_day9.c  LICENSE  README.md  day1_2024.c  day2_2024.c  day3_2024.c  day4_2024.c  day5_2024.c  day6_2024.c  day7_2024.c  example.c  files.c  files.h  files_test.c  grid.c  grid.h  grid_test.c  hashmap.c  hashmap.h  hashmap_test.c  meson.build  regex.c  regex.h  regex_test.c  strings.c  strings.h  strings_test.c  vector.c  vector.h  vector_test.c
inputs/: day7-test.txt
test/: example.txt
